--- a/index.html
+++ b/index.html
@@ -15,16 +15,8 @@
   <h1>Jogja - Housing Estate Manager</h1>
   <h2>A game by Dtji Psimfans (Admin and creator of "Global App Developers @ Jogja" Facebook group)</h2>
   <h2>This game is made in 2019 and is about managing housing estates in Jogja and making them improve.</h2>
-  <h3>Below is the table of housing estates and special buildings you currently have</h3>
-  <table>
-    <tr>
-      <th>Housing Estate/Special Building</th>
-      <th>Description</th>
-      <th>Amount Owned</th>
-      <th>Costs</th>
-      <th>Actual Production Rates</th>
-      <th>Upgrade Button</th>
-     <tr>
+  <br></br>
+  <div id="buildings_table"</div>
   <script src="building.js"></script>
   <script src="player.js"></script>
   <script src="decimal.js"></script>
