--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="player.js"></script>
   <script src="decimal.js"></script>
   <script src="upgrade.js"></script>
+  <script src="save.js"></script>
   <script src="http://peterolson.github.com/BigInteger.js/BigInteger.min.js"></script>
 </body>
 </html>
