--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Jogja - Housing Estate Manager</h1>
   <h2>A game by Dtji Psimfans (Admin and creator of "Global App Developers @ Jogja" Facebook group)</h2>
   <h2>This game is made in 2019 and is about managing housing estates in Jogja and making them improve.<br></br></h2>
-  <div id="buildings_table"</div>
+  <div id="buildings_table"></div>
   <script src="building.js"></script>
   <script src="player.js"></script>
   <script src="decimal.js"></script>
